# stardict-3

./: configure.ac
dict/: autogen.sh  configure.ac
dict/data/: Makefile.am
dict/po/: zh_CN.po
dict/src/: Makefile.am  org.stardict.xml  stardict-server.cpp  stardict-server.h  stardict.cpp  tomboykeybinder.h
dict/src/lib/: full_text_trans.cpp  full_text_trans.h  http_client.cpp
dict/stardict-plugins/stardict-flite-tts-plugin/: stardict_flite.cpp
lib/: configure.ac
tools/: configure.ac
tools/src/: wikipediaImage.cpp
